--- a/src/component/about/hero/Hero.module.css
+++ b/src/component/about/hero/Hero.module.css
@@ -6,8 +6,9 @@ body {
     position: relative; 
     margin-top: 90px;
     margin: 20px 0;
-    height: 500px;; 
-    width: 1263px;
+    width: 1404px;
+  height: 500px;
+   
 }
 
 .line {
